# Polaris-2019

./: .gitignore  README.md  docker_make.sh
.github/workflows/: ccpp.yml  docker.yml
ADR/: README  README.md  vision_node_python_refactor.md
ros/: auv.launch  docker_make.sh  docker_run.sh  docker_shell.sh  periph_test.launch
ros/src/: CMakeLists.txt
ros/src/ai/src/: master.cpp
ros/src/controlsystem/: CMakeLists.txt  README.md  package.xml  paramloadingex.txt
ros/src/controlsystem/config/: DiveRotateSurface.yaml  Forwards.yaml  Idle.yaml  Rotate.yaml  statemachine.yaml  test.yaml
ros/src/controlsystem/include/: movementsystem.hpp  procedures.hpp  statemachine.hpp
ros/src/controlsystem/launchfiles/: controlsystem.launch
ros/src/controlsystem/src/: controlsystem_node.cpp  movementsystem.cpp  statemachine.cpp
ros/src/controlsystem/test/: test_movementsystem.cpp
ros/src/dsp/include/: fir_filter.hpp
ros/src/monitor/: CMakeLists.txt  devices.json  motor_controller.json  power_board.json
ros/src/monitor/launchfiles/: jetson_performance_data.launch  json_data.launch
ros/src/monitor/msg/: JetsonData.msg  jetson_data.msg  jetson_data_msg.msg
ros/src/monitor/src/: devices.hpp  jetson_data.cpp  serial_manager.cpp
ros/src/nav/: CMakeLists.txt  README.md  package.xml  package.xml.hidden
ros/src/nav/msg/: control_system_status.msg  request.msg
ros/src/nav/src/: ControlSystem.cpp
ros/src/navigation/: CMakeLists.txt
ros/src/peripherals/: CMakeLists.txt
ros/src/vision/: CMakeLists.txt  objects.json  package.xml
ros/src/webgui/: system.html
(+54 files in other folders)
